--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -47,7 +47,7 @@ a {
   --font-size-small: 1rem;
 
   --padding: 1.5rem;
-  --margin-top: 4rem;
+  --margin: 4rem;
 
   --border-radius: 7px;
   --border: 2px var(--main-color) solid;
