--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -3,3 +3,89 @@
 
   background: linear-gradient(to right, var(--bg-color), #202737);
 }
+
+.main {
+  height: 90vh;
+  width: 100%;
+
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  color: var(--white-color);
+}
+
+.left {
+  height: 200px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+
+.left h1 {
+  font-weight: 400;
+  font-size: var(--font-size-large);
+}
+
+.left h1 span {
+  color: var(--main-color);
+}
+
+.chart {
+  max-width: 700px;
+  width: 100%;
+}
+
+.buttons {
+  width: 75%;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.buttons select {
+  padding: 0.5rem 2rem;
+
+  color: var(--bg-color);
+
+  outline: none;
+  border-radius: var(--border-radius);
+  border: var(--border-white);
+
+  font-size: var(--font-size-small);
+
+  cursor: pointer;
+}
+
+.buttons select option {
+  color: var(--bg-color);
+
+  outline: none;
+  border: none;
+}
+
+.buttons button {
+  padding: 0.5rem 2rem;
+
+  color: var(--bg-color);
+
+  outline: none;
+  border: var(--border);
+
+  border-radius: var(--border-radius);
+  background-color: var(--main-color);
+
+  font-size: var(--font-size-small);
+
+  transition: var(--transition);
+
+  cursor: pointer;
+}
+
+.buttons button:hover {
+  background-color: transparent;
+  color: white;
+}
