--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -1,122 +1,91 @@
 .container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  height: 100vh;
+
+  background: linear-gradient(to right, var(--bg-color), #202737);
 }
 
 .main {
-  padding: 5rem 0;
-  flex: 1;
+  height: 90vh;
+  width: 100%;
+
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  color: var(--white-color);
+}
+
+.left {
+  height: 200px;
+
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-around;
+  align-items: flex-start;
 }
 
-.footer {
+.left h1 {
+  font-weight: 400;
+  font-size: var(--font-size-large);
+}
+
+.left h1 span {
+  color: var(--main-color);
+}
+
+.chart {
+  max-width: 700px;
   width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
+}
+
+.buttons {
+  width: 75%;
+
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
-.footer img {
-  margin-left: 0.5rem;
+.buttons select {
+  padding: 0.5rem 2rem;
+
+  color: var(--bg-color);
+
+  outline: none;
+  border-radius: var(--border-radius);
+  border: var(--border-white);
+
+  font-size: var(--font-size-small);
+
+  cursor: pointer;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.buttons select option {
+  color: var(--bg-color);
+
+  outline: none;
+  border: none;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+.buttons button {
+  padding: 0.5rem 2rem;
+
+  color: var(--bg-color);
+
+  outline: none;
+  border: var(--border);
+
+  border-radius: var(--border-radius);
+  background-color: var(--main-color);
+
+  font-size: var(--font-size-small);
+
+  transition: var(--transition);
+
+  cursor: pointer;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
-}
-
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.buttons button:hover {
+  background-color: transparent;
+  color: white;
 }
