added page files for clash royale

--- a/frontend/styles/Header.module.css
+++ b/frontend/styles/Header.module.css
@@ -19,7 +19,7 @@
   background-repeat: no-repeat;
 }
 
-.header h1 {
+.circleBg a {
   font-size: var(--font-size-large);
   font-weight: 400;
 }
@@ -117,7 +117,6 @@
   flex-direction: column;
   align-content: center;
   justify-content: center;
-  /* border-radius: var(--border-radius); */
   border: var(--border);
 }
 
