--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -1,7 +1,7 @@
 .container {
   height: 100vh;
 
-  background: linear-gradient(to right, var(--bg-color), #202737);
+  background: var(--gradient);
 }
 
 .main {
