--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -65,3 +65,20 @@ a {
 }
 
 /* =========================== */
+
+/* ======= Scrollbar ========= */
+
+:root::-webkit-scrollbar-track {
+  background-color: #333844;
+}
+
+:root::-webkit-scrollbar {
+  width: 8px;
+  background-color: #333844;
+}
+
+:root::-webkit-scrollbar-thumb {
+  background-color: var(--bg-color);
+}
+
+/* =========================== */
