--- a/frontend/styles/404.module.css
+++ b/frontend/styles/404.module.css
@@ -1,15 +1,64 @@
 .container {
-    margin-left: 43%;
-    color:whitesmoke;
-    margin-top:17%
+  min-height: 100vh;
+  height: 100%;
+
+  background: var(--gradient);
 }
 
-.error {
-    font-size: 8rem;
-    margin-left: -20%;
+.fourohfour {
+  height: 90vh;
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  color: var(--white-color);
 }
 
-.errorSmall {
-    font-size: 2rem;
-    margin-left: -10%;
+.fourohfour img {
+  max-width: 50rem;
+  width: 100%;
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  margin-bottom: 2rem;
+}
+
+.left h1 {
+  font-weight: 400;
+  font-size: var(--font-size-medium);
+
+  text-align: center;
+}
+
+.left a {
+  margin-top: 1rem;
+  padding: 0.5rem 2rem;
+
+  color: var(--bg-color);
+
+  outline: none;
+  border: var(--border);
+
+  border-radius: var(--border-radius);
+  background-color: var(--main-color);
+
+  font-size: var(--font-size-small);
+  text-align: center;
+
+  transition: var(--transition);
+
+  cursor: pointer;
+}
+
+.left a:hover {
+  background-color: transparent;
+  color: var(--white-color);
 }
