--- a/frontend/styles/ClashRoyale.module.css
+++ b/frontend/styles/ClashRoyale.module.css
@@ -175,6 +175,8 @@
   justify-content: space-between;
   align-items: center;
 
+  color: var(--white-color);
+
   margin-bottom: 3rem;
 
   text-align: center;
