--- a/frontend/styles/Header.module.css
+++ b/frontend/styles/Header.module.css
@@ -11,8 +11,10 @@
   height: 35vh;
 
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+
+  padding-left: 2rem;
 
   background-image: url("/circle.svg");
   background-size: cover;
