--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -6,18 +6,30 @@
 }
 
 .main {
-  height: 90vh;
+  min-height: 90vh;
   width: 100%;
-  display: flex;
-  justify-content: space-around;
+  display: grid;
+  justify-items: center;
   align-items: center;
-
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1rem;
+  overflow: hidden;
   color: var(--white-color);
+  padding: 2rem 1rem;
+}
+
+@media only screen and (max-width: 780px) {
+  .main {
+    grid-template-columns: 1fr;
+  }
+  .main > :not(:last-child) {
+    margin-bottom: 2rem;
+  }
 }
 
 .left {
-  height: 200px;
-
+  min-width: 360px;
+  min-height: 180px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -26,66 +38,71 @@
 
 .left h1 {
   font-weight: 400;
-  font-size: var(--font-size-large);
+  text-align-last: left;
+  font-size: clamp(2rem, 3vw, var(--font-size-large));
 }
 
+@media only screen and (max-width: 768px) {
+  .left h1 {
+    text-align: center;
+  }
+}
 .left h1 span {
   color: var(--main-color);
 }
 
 .chart {
-  max-width: 700px;
+  max-width: 678px;
+  min-width: 380px;
   width: 100%;
+  height: auto;
 }
 
 .buttons {
-  width: 75%;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+.buttons > * {
+  margin: 0.8rem;
+}
 
-.buttons select {
-  padding: 0.5rem 2rem;
-
-  color: var(--bg-color);
-
-  outline: none;
+.button {
+  display: inline-block;
+  color: var(--white-color);
+  background-color: var(--main-color);
+  padding: 0.5rem 1rem;
+  font-weight: bold;
   border-radius: var(--border-radius);
-  border: var(--border-white);
-
-  font-size: var(--font-size-small);
-
+  outline: none;
+  font-size: clamp(var(--font-size-small), 1.3vw, 1.8rem);
+  transition: background-color 0.33s ease-in;
+  transition: color 0.33s ease-out;
   cursor: pointer;
 }
 
-.buttons select option {
+.button.game {
   color: var(--bg-color);
+  background-color: var(--white-color);
+  border: var(--border-white);
+}
 
+.button.game option {
+  color: var(--bg-color);
   outline: none;
   border: none;
 }
-
-.buttons a {
-  padding: 0.5rem 2rem;
-
-  color: var(--bg-color);
-
-  outline: none;
-  border: var(--border);
-
-  border-radius: var(--border-radius);
-  background-color: var(--main-color);
-
-  font-size: var(--font-size-small);
-
-  transition: var(--transition);
-
-  cursor: pointer;
+.button.game option::selection {
+  background-color: aqua;
 }
 
-.buttons a:hover {
+.button.check {
+  color: var(--bg-color);
+  border: var(--border);
+  background-color: var(--main-color);
+}
+
+.button.check:hover {
   background-color: transparent;
-  color: var(--white-color);
+  color: var(--main-color);
 }
