fixed bug with circle in header

--- a/frontend/styles/Header.module.css
+++ b/frontend/styles/Header.module.css
@@ -8,8 +8,8 @@
 }
 
 .circleBg {
-  width: 540px;
-  height: 35vh;
+  width: 580px;
+  height: 370px;
 
   display: flex;
   justify-content: flex-start;
