--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -1,59 +1,60 @@
 .container {
   min-height: 100vh;
   height: 100%;
-
   background: var(--gradient);
 }
 
 .main {
-  min-height: 90vh;
   width: 100%;
+  height: 100%;
+  min-height: 90vh;
   display: grid;
   justify-items: center;
   align-items: center;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
   grid-gap: 1rem;
-  overflow: hidden;
+  /* overflow: hidden; */
   color: var(--white-color);
-  padding: 2rem 1rem;
 }
 
 @media only screen and (max-width: 780px) {
   .main {
     grid-template-columns: 1fr;
   }
-  .main > :not(:last-child) {
-    margin-bottom: 2rem;
-  }
 }
 
 .left {
-  min-width: 360px;
   min-height: 180px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: flex-start;
+  padding: 0 1rem;
+}
+.left :not(.left:last-child) {
+  margin-bottom: 1.5rem;
 }
 
 .left h1 {
   font-weight: 400;
-  text-align-last: left;
-  font-size: clamp(2rem, 3vw, var(--font-size-large));
+  text-align: left;
+  font-size: clamp(2.4rem, 3.5vw, var(--font-size-large));
 }
 
-@media only screen and (max-width: 768px) {
-  .left h1 {
-    text-align: center;
-  }
-}
 .left h1 span {
   color: var(--main-color);
 }
 
+@media only screen and (max-width: 780px) {
+  .left {
+    align-items: center;
+  }
+  .left h1 {
+    text-align: center;
+  }
+}
+
 .chart {
-  max-width: 678px;
-  min-width: 380px;
   width: 100%;
   height: auto;
 }
@@ -64,7 +65,13 @@
   align-items: center;
 }
 .buttons > * {
-  margin: 0.8rem;
+  margin: 0.5rem;
+}
+
+@media only screen and (max-width: 380px) {
+  .buttons {
+    flex-direction: column;
+  }
 }
 
 .button {
@@ -72,10 +79,9 @@
   color: var(--white-color);
   background-color: var(--main-color);
   padding: 0.5rem 1rem;
-  font-weight: bold;
   border-radius: var(--border-radius);
   outline: none;
-  font-size: clamp(var(--font-size-small), 1.3vw, 1.8rem);
+  font-size: clamp(var(--font-size-small), 1.5vw, 1.8rem);
   transition: background-color 0.33s ease-in;
   transition: color 0.33s ease-out;
   cursor: pointer;
