--- a/frontend/styles/Header.module.css
+++ b/frontend/styles/Header.module.css
@@ -1,19 +1,21 @@
 .header {
-  min-height: 80px;
+  min-height: 100px;
   height: 10vh;
   display: flex;
   justify-content: space-between;
-  align-items: center;
   color: var(--white-color);
-  padding: 0.5rem 2rem;
+  align-items: center;
 }
 
 .circleBg {
   width: 580px;
   height: 370px;
+
   display: flex;
   justify-content: flex-start;
   align-items: center;
+
+  padding-left: 2rem;
 
   background-image: url("/circle.svg");
   background-size: cover;
@@ -21,7 +23,7 @@
 }
 
 .circleBg a {
-  font-size: clamp(2rem, 5vw, var(--font-size-large));
+  font-size: var(--font-size-large);
   font-weight: 400;
 }
 
@@ -41,6 +43,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
   outline: none;
 }
 
@@ -52,13 +55,14 @@
   height: 28px;
   margin-right: 0.5rem;
   color: var(--secondary-color);
+
   outline: none;
 }
 
 .signin {
   border: var(--border);
   background-color: transparent;
-  color: var(--main-color);
+  color: var(--white-color);
   font-size: 18px;
   padding: 0.5rem 2rem;
   border-radius: var(--border-radius);
@@ -118,6 +122,7 @@
 @media screen and (max-width: 1450px) {
   .circleBg {
     width: auto !important;
+    height: 100% !important;
     background: none;
   }
 }
