--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -1,142 +1,93 @@
 .container {
   min-height: 100vh;
   height: 100%;
+
   background: var(--gradient);
 }
 
 .main {
+  height: 90vh;
   width: 100%;
-  height: 100%;
-  min-height: 90vh;
-  display: grid;
-  justify-items: center;
+  display: flex;
+  justify-content: space-around;
   align-items: center;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 1rem;
+
   color: var(--white-color);
 }
 
-@media only screen and (max-width: 780px) {
-  .main {
-    grid-template-columns: 1fr;
-  }
-}
-
 .left {
-  min-height: 180px;
+  height: 200px;
+
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: flex-start;
-  padding: 0 1rem;
-}
-.left :not(.left:last-child) {
-  margin-bottom: 1.5rem;
 }
 
 .left h1 {
   font-weight: 400;
-  text-align: left;
-  font-size: clamp(2.4rem, 3.5vw, var(--font-size-large));
-  animation: fadeIn 0.66s ease forwards;
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateX(-50%);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0%);
-  }
+  font-size: var(--font-size-large);
 }
 
 .left h1 span {
   color: var(--main-color);
 }
 
-@media only screen and (max-width: 780px) {
-  .left {
-    align-items: center;
-  }
-  .left h1 {
-    text-align: center;
-  }
-}
-
 .chart {
+  max-width: 700px;
   width: 100%;
-  height: auto;
 }
 
 .buttons {
+  width: 75%;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* for the animation delay */
-  opacity: 0;
-  transform: translateY(50%);
-  animation: fadeUp 0.66s 0.33s ease forwards;
-}
-.buttons > * {
-  margin: 0.5rem;
 }
 
-@keyframes fadeUp {
-  from {
-    opacity: 0;
-    transform: translateY(50%);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0%);
-  }
-}
+.buttons select {
+  padding: 0.5rem 2rem;
 
-@media only screen and (max-width: 380px) {
-  .buttons {
-    flex-direction: column;
-  }
-}
+  color: var(--bg-color);
 
-.button {
-  display: inline-block;
-  color: var(--white-color);
-  background-color: var(--main-color);
-  padding: 0.5rem 1rem;
-  border-radius: var(--border-radius);
   outline: none;
-  font-size: clamp(var(--font-size-small), 1.5vw, 1.8rem);
-  transition: background-color 0.33s ease-in;
-  transition: color 0.33s ease-out;
+  border-radius: var(--border-radius);
+  border: var(--border-white);
+
+  font-size: var(--font-size-small);
+
   cursor: pointer;
 }
 
-.button.game {
+.buttons select option {
   color: var(--bg-color);
-  background-color: var(--white-color);
-  border: var(--border-white);
-}
 
-.button.game option {
-  color: var(--bg-color);
   outline: none;
   border: none;
 }
-.button.game option::selection {
-  background-color: aqua;
-}
 
-.button.check {
+.buttons a {
+  padding: 0.5rem 2rem;
+
   color: var(--bg-color);
+
+  outline: none;
   border: var(--border);
+
+  border-radius: var(--border-radius);
   background-color: var(--main-color);
+
+  font-size: var(--font-size-small);
+
+  transition: var(--transition);
+
+  cursor: pointer;
 }
 
-.button.check:hover {
+.buttons a:hover {
   background-color: transparent;
-  color: var(--main-color);
+  color: var(--white-color);
 }
 
 @media screen and (max-width: 1366px) {
