Minor fixes to the notification component

--- a/frontend/styles/Notification.module.css
+++ b/frontend/styles/Notification.module.css
@@ -1,5 +1,5 @@
 .notification {
-  position: absolute;
+  position: fixed;
   top: 10%;
   left: calc(50% - 250px);
   color: var(--white-color);
@@ -13,11 +13,14 @@
 }
 
 @keyframes popIn {
-  from {
+  0% {
     transform: translateY(25%);
     opacity: 0;
   }
-  to {
+  40% {
+    opacity: 1;
+  }
+  100% {
     transform: translateY(0%);
     opacity: 1;
   }
